--- a/src/api gateways/NSE.Bff.Shopping/appsettings.Production.json
+++ b/src/api gateways/NSE.Bff.Shopping/appsettings.Production.json
@@ -6,11 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "CatalogUrl": "http://nerdstore-api-customer:7057",
+  "CatalogUrl": "http://nerdstore-api-catalog:7012",
   "CartUrl": "http://nerdstore-api-cart:7136",
   "OrderUrl": "http://nerdstore-api-order:7283",
   "PaymentUrl": "http://nerdstore-api-payment:7100",
-  "CustomerUrl": "https://nerdstore-api-customer:7057",
+  "CustomerUrl": "http://nerdstore-api-customer:7057",
   "MessageQueueConnectionString": {
     "MessageBus": "host=rabbit-nerdstore:5672;publisherConfirms=true;timeout=30;username=nerdstore;password=nerdstore"
   },
