--- a/docker/nginx/nginx.prod.conf
+++ b/docker/nginx/nginx.prod.conf
@@ -5,23 +5,23 @@ http {
     sendfile on;
 
     upstream web-mvc {
-        server web-web:5001;
+        server web-mvc:5001;
     }
 
     server {
-        listem 80;
+        listen 80;
         server_name $hostname;
 
         location / {
-            proxy_pass          http://web-mvc;
-            proxy_redirect      off;
-            proxy_http_version  1.1;
-            proxy_set_header    Connection keep-alive;
-            proxy_set_header    Host $host;
-            proxy_set_header    X-real-IP @remote_addr;
-            proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header    X-Forwarded-Proto $scheme;
-            proxy_set_header    X-Forwarded-Host $server_name;
+            proxy_pass         http://web-mvc;
+            proxy_redirect     off;
+            proxy_http_version 1.1;
+            proxy_set_header   Connection keep-alive;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header   X-Forwarded-Host $server_name;
         }
     }
 }
